--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.javastudio.tutorial.stream</groupId>
-    <artifactId>java-stream-tutorial</artifactId>
+    <artifactId>java-stream-parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <modules>
+        <module>intermediate-operations</module>
+    </modules>
+    <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
