--- a/java-stream-overview/pom.xml
+++ b/java-stream-overview/pom.xml
@@ -10,7 +10,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>intermediate-operations</artifactId>
+    <artifactId>java-stream-overview</artifactId>
 
     <build>
         <finalName>demo</finalName>
@@ -37,7 +37,7 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.2.3</version>
-            <scope>runtime</scope>
+<!--            <scope>runtime</scope>-->
         </dependency>
     </dependencies>
 </project>
